tests/baselines/reference/importAttributes5.errors.txt
importAttributes5.ts(1,20): error TS2307: Cannot find module './first' or its corresponding type declarations.
importAttributes5.ts(1,36): error TS1005: '}' expected.


==== importAttributes5.ts (2 errors) ====
    import * as f from "./first" with {
                       ~~~~~~~~~
!!! error TS2307: Cannot find module './first' or its corresponding type declarations.
                                       
!!! error TS1005: '}' expected.
!!! related TS1007 importAttributes5.ts:1:35: The parser expected to find a '}' to match the '{' token here.